--- a/STAT 184 Cars Final.Rmd
+++ b/STAT 184 Cars Final.Rmd
@@ -11,12 +11,12 @@ output:
 
 ## Introduction
 
-**Are Used Car Prices Different in Inner and Outer Cities?**
+**Are Used Car (Ford) Prices Different in Inner and Outer Cities?**
 
 Since 2020, notably after the pandemic, car prices have soared to new heights. In accordance to economic inflation, specifically fuel prices, there is no doubt that purchasing a new car requires immense reflection and a strong financial position. One solution to consider is to purchase a used car. 
 
 When it comes to purchasing a used car, many factors are considered. Such factors include price of the car, the mileage, and the model. These elements have proved to be statistically significant in determining the price of a used car; however, what about the location from whom the car is purchased? 
-For instance, the supply and demand in inner cities, such as New York or Philadelphia, may be higher than that of rural or suburban areas like Harrisburg or Albany. Because inner cities have a larger population, demand may be higher, and this can lead to car price inflation. On the other hand, less populated areas may have less demand and could be cheaper. Therefore, a research question could be, "Are Used Car Prices Different in Inner and Outer Cities?"
+For instance, the supply and demand in inner cities, such as New York or Philadelphia, may be higher than that of rural or suburban areas like Harrisburg or Albany. Because inner cities have a larger population, demand may be higher, and this can lead to car price inflation. On the other hand, less populated areas may have less demand and could be cheaper. Therefore, a research question could be, "Are Used Car (Ford) Prices Different in Inner and Outer Cities?"
 
 To answer the question, our group used data from Autotrader. The Autotrader dataset generator is a website that generates CSV datasets of used cars listed at autotrader.com, which is an online auto retailer, based on a maker, a model, and a zip code. In the data set, each case represents an individual Ford car. We chose Ford as the focused model as it is the most popular car brand in the United States. This would allow for large amounts of data. We randomly selected one major city and a suburban or rural area. These locations are New York City and Albany, and Philadelphia and Harrisburg. In the dataset, there are the variables year, price, and mileage; thus, we will need to add a column for "location." This is further explained in the data visualization preparation process.
 
@@ -375,4 +375,11 @@ In table 2, the minimum values are 2 thousand dollars and 1.795 thousand dollars
 Regarding the first quartile, Q1, 25% of the recorded prices are below 17 thousand dollars, respectively. There is a slim difference of 0.703 thousand dollars. The third quartile prices, Q3, are less than 37.9 thousand dollars and 36.988 thousand dollars. Again, the difference is not significant enough to state that there is significance in price based on location. From the summary table of Pennsylvania, the prices are higher as whole, but when compared to the summary of New York, there is less of a location difference. This is mildly contradicting to our research question; however, it is insight to consider other confounding variables that may arise from the data set, such as year of the model.
 
 The median of the locations, 25.769 and 24.995 thousand dollars further highlight the average price of a Used Ford car to be around mid 20 thousand dollars, whether or not it is in the inner or outer city, when using evidence from both Pennsylvania and New York. There does not seem to be a significant difference in the median values, and based on the full analysis of the table, including the five-number summary and maximum and minimum, Pennsylvania does not have any important distinction in where consumers should purchase used Fords. 
+
+### **Conclusion**
+
+**Research Question: Are Used (Ford) Car Prices Different in Inner and Outer Cities?**
+
+In conclusion, based on the EDA and various visualizations presented, we did not find evidence that there is a statistically significant difference between used Ford car prices in inner and outer cities. Although there was no hypothesis test, it can be predicted that the p-value would be larger than a 5% threshold. To summarize, the boxplot provided us with the distribution, spread, and general possibility of outliers in the data set. The IQR for Pennsylvania and New York did not differ much between inner and outer cities. To further emphasize this fact, we used a bargraph with the median as the response variable, to "zoom in" on the average differences. We found that there are minor distinctions between the median values. Next, to explore the variable year, and provide a general visualization of each individual case, along with a regression line to portray the upward trend, we used a scatterplot. While there was nothing new about the median, we discovered that there was an interaction between the two regression lines, and with further anaylsis, such as a hypothesis test between interactive terms, there may be a significant p-value. Finally, with the summary tables, we were able to discuss the numerical differences and found that 2 thousand dollars was the largest/most significant found. Overall, it can be assumed that location is not a significant variable when considering used car prices based on the Ford model.
+
 
