--- a/STAT 184 Cars Final.Rmd
+++ b/STAT 184 Cars Final.Rmd
@@ -3,8 +3,8 @@ title: "Stat 184 Final Project"
 author: "Kelly Zhang, Tyler Wong, Yuheng Xie"
 date: "`r paste('Last Updated:', Sys.Date())`"
 output:
-  html_notebook: default
   pdf_document: default
+  html_notebook: default
   html_document:
     df_print: paged
 ---
@@ -48,53 +48,53 @@ library(tidyverse)
 **Import Datasets**
 
 ```{r, include = F}
-NYC_Taurus <- read.csv("NY (Taurus).csv")
-NYC_Mustang <- read.csv("NY (Mustang).csv")
-NYC_Fusion <- read.csv("NY (Fusion).csv")
-NYC_Focus <- read.csv("NY (Focus).csv")
-NYC_Fiesta <- read.csv("NY (Fiesta).csv")
-NYC_F350 <- read.csv("NY (F350).csv")
-NYC_F250 <- read.csv("NY (F250).csv")
-NYC_F150 <- read.csv("NY (F150).csv")
-NYC_Explorer <- read.csv("NY (Explorer).csv")
-NYC_Escape <- read.csv("NY (Escape).csv")
-NYC_Edge <- read.csv("NY (Edge).csv")
+NYC_Taurus <- read.csv("Datasets/ALB_Edge.csv")
+NYC_Mustang <- read.csv("Datasets/NY (Mustang).csv")
+NYC_Fusion <- read.csv("Datasets/NY (Fusion).csv")
+NYC_Focus <- read.csv("Datasets/NY (Focus).csv")
+NYC_Fiesta <- read.csv("Datasets/NY (Fiesta).csv")
+NYC_F350 <- read.csv("Datasets/NY (F350).csv")
+NYC_F250 <- read.csv("Datasets/NY (F250).csv")
+NYC_F150 <- read.csv("Datasets/NY (F150).csv")
+NYC_Explorer <- read.csv("Datasets/NY (Explorer).csv")
+NYC_Escape <- read.csv("Datasets/NY (Escape).csv")
+NYC_Edge <- read.csv("Datasets/NY (Edge).csv")
 
-ALB_Taurus <- read.csv("ALB_Taurus.csv")
-ALB_Mustang <- read.csv("ALB_Mustang.csv")
-ALB_Fusion <- read.csv("ALB_Fusion.csv")
-ALB_Focus <- read.csv("ALB_Focus.csv")
-ALB_Fiesta <- read.csv("ALB_Fiesta.csv")
-ALB_F350 <- read.csv("ALB_F350.csv")
-ALB_F250 <- read.csv("ALB_F250.csv")
-ALB_F150 <- read.csv("ALB_F150.csv")
-ALB_Explorer <- read.csv("ALB_Explorer.csv")
-ALB_Escape <- read.csv("ALB_Escape.csv")
-ALB_Edge <- read.csv("ALB_Edge.csv")
+ALB_Taurus <- read.csv("Datasets/ALB_Taurus.csv")
+ALB_Mustang <- read.csv("Datasets/ALB_Mustang.csv")
+ALB_Fusion <- read.csv("Datasets/ALB_Fusion.csv")
+ALB_Focus <- read.csv("Datasets/ALB_Focus.csv")
+ALB_Fiesta <- read.csv("Datasets/ALB_Fiesta.csv")
+ALB_F350 <- read.csv("Datasets/ALB_F350.csv")
+ALB_F250 <- read.csv("Datasets/ALB_F250.csv")
+ALB_F150 <- read.csv("Datasets/ALB_F150.csv")
+ALB_Explorer <- read.csv("Datasets/ALB_Explorer.csv")
+ALB_Escape <- read.csv("Datasets/ALB_Escape.csv")
+ALB_Edge <- read.csv("Datasets/ALB_Edge.csv")
 
-PHIL_Taurus <- read.csv("PHIL_Taurus.csv")
-PHIL_Mustang <- read.csv("PHIL_Mustang.csv")
-PHIL_Fusion <- read.csv("PHIL_Fusion.csv")
-PHIL_Focus <- read.csv("PHIL_Focus.csv")
-PHIL_Fiesta <- read.csv("PHIL_Fiesta.csv")
-PHIL_F350 <- read.csv("PHIL_F350.csv")
-PHIL_F250 <- read.csv("PHIL_F250.csv")
-PHIL_F150 <- read.csv("PHIL_F150.csv")
-PHIL_Explorer <- read.csv("PHIL_Explorer.csv")
-PHIL_Escape <- read.csv("PHIL_Escape.csv")
-PHIL_Edge <- read.csv("PHIL_Edge.csv")
+PHIL_Taurus <- read.csv("Datasets/PHIL_Taurus.csv")
+PHIL_Mustang <- read.csv("Datasets/PHIL_Mustang.csv")
+PHIL_Fusion <- read.csv("Datasets/PHIL_Fusion.csv")
+PHIL_Focus <- read.csv("Datasets/PHIL_Focus.csv")
+PHIL_Fiesta <- read.csv("Datasets/PHIL_Fiesta.csv")
+PHIL_F350 <- read.csv("Datasets/PHIL_F350.csv")
+PHIL_F250 <- read.csv("Datasets/PHIL_F250.csv")
+PHIL_F150 <- read.csv("Datasets/PHIL_F150.csv")
+PHIL_Explorer <- read.csv("Datasets/PHIL_Explorer.csv")
+PHIL_Escape <- read.csv("Datasets/PHIL_Escape.csv")
+PHIL_Edge <- read.csv("Datasets/PHIL_Edge.csv")
 
-HARS_Taurus <- read.csv("HARS_Taurus.csv")
-HARS_Mustang <- read.csv("HARS_Mustang.csv")
-HARS_Fusion <- read.csv("HARS_Fusion.csv")
-HARS_Focus <- read.csv("HARS_Focus.csv")
-HARS_Fiesta <- read.csv("HARS_Fiesta.csv")
-HARS_F350 <- read.csv("HARS_F350.csv")
-HARS_F250 <- read.csv("HARS_F250.csv")
-HARS_F150 <- read.csv("HARS_F150.csv")
-HARS_Explorer <- read.csv("HARS_Explorer.csv")
-HARS_Escape <- read.csv("HARS_Escape.csv")
-HARS_Edge <- read.csv("HARS_Edge.csv")
+HARS_Taurus <- read.csv("Datasets/HARS_Taurus.csv")
+HARS_Mustang <- read.csv("Datasets/HARS_Mustang.csv")
+HARS_Fusion <- read.csv("Datasets/HARS_Fusion.csv")
+HARS_Focus <- read.csv("Datasets/HARS_Focus.csv")
+HARS_Fiesta <- read.csv("Datasets/HARS_Fiesta.csv")
+HARS_F350 <- read.csv("Datasets/HARS_F350.csv")
+HARS_F250 <- read.csv("Datasets/HARS_F250.csv")
+HARS_F150 <- read.csv("Datasets/HARS_F150.csv")
+HARS_Explorer <- read.csv("Datasets/HARS_Explorer.csv")
+HARS_Escape <- read.csv("Datasets/HARS_Escape.csv")
+HARS_Edge <- read.csv("Datasets/HARS_Edge.csv")
 
 ```
 
